# Metrology-and-Process-Planner

./: .gitignore  LICENSE  README.md  grain.xml  pyproject.toml  vulture_whitelist.py
docs/: AGENT_WORK_PACKETS.md  ARCHITECTURE_CONTRACTS_TO_PROTECT.md  ARTIFACT_REPORTING_AUDIT.md  CANONICAL_IMPORTS.md  COMPATIBILITY_SHIM_AUDIT.md  CONTRACT_MATRIX.md  DECISIONS.md  DEPENDENCY_AUDIT.md  E2E_WORKFLOW_AUDIT.md  FEATURE_MATRIX.md  FILE_MIGRATION_AUDIT.md  FILE_ORGANIZATION_AUDIT.md  FULL_FEATURE_AUDIT.md  GAP_AUDIT.md  GOLDEN_FIXTURES.md  IMAGE_PIPELINE_AUDIT.md  IMPLEMENTATION_STATUS.md  IMPORT_MIGRATION.md  INTEGRATION_SEAMS.md  KNOWN_LIMITATIONS.md  MODELESS_SURFACE_USABILITY_EVALUATION.md  MODE_AUDIT.md  NEXT_PRIORITIES.md  NO_BYPASS_AUDIT.md  OUTPUT_QUALITY_EVALUATION.md  P0_BLOCKERS.md  P1_INTEGRATION_FIXES.md  PACKAGE_ARCHITECTURE.md  PRIMARY_OPERATOR_WORKFLOW_EVALUATION.md  PROCESS_NON_PROCESS_CLARITY_EVALUATION.md  PROCESS_SOLVER_AUDIT.md  PRODUCT_COHERENCE_EVALUATION.md  RELEASE_READINESS_EVALUATION.md  RENDERING_AUDIT.md  RENDERING_KNOWN_LIMITATIONS.md  RENDER_REGRESSION.md  SESSION_DOCUMENT_AUDIT.md  SOLVER_ACCURACY_ENVELOPE.md  SOLVER_INVARIANTS.md  SOLVER_KNOWN_LIMITATIONS.md  (+21 more)
pymacros/: metrology_process_planner_bootstrap.py
tests/: __init__.py  artifact_helpers.py  artifact_lifecycle_fixtures.py  capture_metadata_pipeline_fixtures.py  capture_setup_readiness_fixtures.py  compound_capture_fixtures.py  cross_section_rendering_fixtures.py  editor_render_fixtures.py  hybrid_solver_fixtures.py  klayout_boundary_fakes.py  klayout_boundary_fixtures.py  klayout_process_common.py  klayout_process_scripts.py  klayout_widget_fixtures.py  measurement_child_fixtures.py  process_context_fixtures.py  process_output_fixtures.py  process_output_loop_fixtures.py  recipe_path_fixtures.py  report_artifact_repair_fixtures.py  reporting_output_assertions.py  reporting_workbench_fixtures.py  session_editor_store_fixtures.py  session_lifecycle_command_fixtures.py  synthetic_operator_lab.py  synthetic_operator_lab_builders.py  synthetic_operator_lab_summaries.py  synthetic_process_lab.py  synthetic_process_models.py  test_advanced_geometry_kernel.py  test_artifact_generator_handlers.py  test_artifact_layout_generator_requirements.py  test_artifact_lifecycle.py  test_artifact_manifest_process_visibility.py  test_artifact_repair_lifecycle.py  test_artifact_repair_process_visibility.py  test_artifact_repair_process_visibility_part2.py  test_artifact_repair_service.py  test_cad_review_annotations.py  test_cad_review_metadata_validation.py  (+254 more)
tools/: __init__.py  audit_imports.py  build_package.py  import_audit_policy.py  (+26 more)
(+677 files in other folders)
